# voipHandset

./: .gitignore  .gitmodules  README.md  beep.pcm  deviceInfo.txt  findEndpoints.py  fixVoiopHandset.py  getEndpoints.py  guiTry.py  handset-daemon.service  handset_daemon.py  keyMappingRaw.py  makeItRing.py  more-info-about-device.txt  notification_spy.py  probingAddresses.py  pyproject.toml  ring.py  showAllDevices.py  showDevInfo.py  turnOnLights.py.py  voipHack.py
HPVoIPHandset.kext/: Info.plist
conf/: 60-handset-speakerphone.conf  99-hp-handset.rules  handset-daemon.service
debian/: changelog  control  copyright  rules  voiphandset.postinst
supportDocs/: README.md
voiphandset/: __init__.py  cli.py  controls.py  cradle_monitor.py  daemon.py  device.py  pipewire_monitor.py  ring.py  routing.py
